# umap_split

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: cifar10_example.py  fashionmnist_example.py  mnist_example.py
tests/: unittest.py
umap_stratified_split/: __init__.py  split.py
